--- a/data/flappy_dynamix_ii.json
+++ b/data/flappy_dynamix_ii.json
@@ -1,6 +1,6 @@
 {
     "id": "71850733",
-    "name": "Flappy Dynamix II"",
+    "name": "Flappy Dynamix II",
     "author": "RadiationV2",
     "verifier": "NoobLookingPro",
     "desc": "After 6 years of wait, 1 year of work and 53k objs, heres the long awaited sequel to Flappy Dynamix. Very epic. Verified by NoobLookingPro",
