--- a/data/flappy_dynamix_ii.json
+++ b/data/flappy_dynamix_ii.json
@@ -7,6 +7,7 @@
     "percentToQualify": "100",
     "handcam": false,
     "hacked": false,
+	"unrated": false,
     "verificationVid": "https://youtu.be/CYD2qPacHxM",
     "password": "idk man",
     "records": [
