--- a/data/flappy_dynamix_ii.json
+++ b/data/flappy_dynamix_ii.json
@@ -5,7 +5,7 @@
     "verifier": "NoobLookingPro",
     "desc": "After 6 years of wait, 1 year of work and 53k objs, heres the long awaited sequel to Flappy Dynamix. Very epic. Verified by NoobLookingPro",
     "percentToQualify": "100",
-    "handcam": false,
+    "handcam": 0,
     "hacked": false,
 	"unrated": false,
     "verificationVid": "https://youtu.be/CYD2qPacHxM",
