--- a/data/flappy_dynamix.json
+++ b/data/flappy_dynamix.json
@@ -11,5 +11,10 @@
     "verificationVid": "https://youtu.be/XRbS2URgB8Y",
     "password": "",
     "records": [
+        {
+            "percent": "100",
+            "link": "https://youtu.be/SJ6NlMQ0YhM?t=6",
+            "user": "Motor8"
+        }
     ]
 }
