--- a/data/flappy_dynamix.json
+++ b/data/flappy_dynamix.json
@@ -9,7 +9,7 @@
     "hacked": false,
     "unrated": true,
     "verificationVid": "https://youtu.be/XRbS2URgB8Y",
-    "password": "",
+    "password": "Not Copyable",
     "records": [
         {
             "percent": "100",
