--- a/data/flappy_dynamix_ii.json
+++ b/data/flappy_dynamix_ii.json
@@ -9,7 +9,7 @@
     "hacked": false,
 	"unrated": false,
     "verificationVid": "https://youtu.be/CYD2qPacHxM",
-    "password": "idk man",
+    "password": "",
     "records": [
 				{
 					"percent": "100",
