--- a/data/flappy_dynamix.json
+++ b/data/flappy_dynamix.json
@@ -15,6 +15,11 @@
             "percent": "100",
             "link": "https://youtu.be/SJ6NlMQ0YhM?t=6",
             "user": "Motor8"
+        },
+        {
+            "percent": "100",
+            "link": "https://youtu.be/U7WfRse9ShU?t=9",
+            "user": "qJaay_"
         }
     ]
 }
