--- a/data/flappy_dynamix.json
+++ b/data/flappy_dynamix.json
@@ -19,7 +19,7 @@
         {
             "percent": "100",
             "link": "https://youtu.be/U7WfRse9ShU?t=9",
-            "user": "qJaay_"
+            "user": "ri0luqy_"
         }
     ]
 }
