--- a/data/flappy_dynamix_ii.json
+++ b/data/flappy_dynamix_ii.json
@@ -25,6 +25,11 @@
 					"percent": "100",
 					"link": "https://youtu.be/gmjdYSNGL1A?t=234",
 					"user": "Motor8"
+				},
+				{
+					"percent": "100",
+					"link": "https://youtu.be/_aaqvWNyr4A?t=45",
+					"user": "meraworld"
 				}
     ]
 }
