major record acceptance

--- a/data/flappy_dynamix.json
+++ b/data/flappy_dynamix.json
@@ -20,6 +20,11 @@
             "percent": "100",
             "link": "https://youtu.be/U7WfRse9ShU?t=9",
             "user": "ri0luqy_"
+        },
+        {
+            "percent": "100",
+            "link": "https://youtu.be/7Z11CGKpNno",
+            "user": "maxgreenevsky"
         }
     ]
 }
