--- a/data/flappy_dynamix.json
+++ b/data/flappy_dynamix.json
@@ -25,6 +25,11 @@
             "percent": "100",
             "link": "https://youtu.be/7Z11CGKpNno",
             "user": "maxgreenevsky"
+        },
+        {
+            "percent": "100",
+            "link": "https://youtu.be/kZMBgcRDVTo?si=X7uV2twRFBSs1lNh",
+            "user": "rei"
         }
     ]
 }
