--- a/data/flappy_dynamix_ii.json
+++ b/data/flappy_dynamix_ii.json
@@ -11,25 +11,30 @@
     "verificationVid": "https://youtu.be/CYD2qPacHxM",
     "password": "",
     "records": [
-				{
-					"percent": "100",
-					"link": "https://youtu.be/LtsbnNy7gy0",
-					"user": "Zest"
-				},
-				{
-					"percent": "100",
-					"link": "https://youtu.be/xOsN50bi0cw",
-					"user": "ATF"
-				},
-				{
-					"percent": "100",
-					"link": "https://youtu.be/gmjdYSNGL1A?t=234",
-					"user": "Motor8"
-				},
-				{
-					"percent": "100",
-					"link": "https://youtu.be/_aaqvWNyr4A?t=45",
-					"user": "meraworld"
-				}
+        {
+            "percent": "100",
+            "link": "https://youtu.be/LtsbnNy7gy0",
+            "user": "Zest"
+        },
+        {
+            "percent": "100",
+            "link": "https://youtu.be/xOsN50bi0cw",
+            "user": "ATF"
+        },
+        {
+            "percent": "100",
+            "link": "https://youtu.be/gmjdYSNGL1A?t=234",
+            "user": "Motor8"
+        },
+        {
+            "percent": "100",
+            "link": "https://youtu.be/_aaqvWNyr4A?t=45",
+            "user": "meraworld"
+        },
+        {
+            "percent": "100",
+            "link": "https://www.youtube.com/watch?v=fxqtgn0VF4M&t=20s",
+            "user": "rei"
+        }
     ]
 }
