--- a/data/flappy_dynamix.json
+++ b/data/flappy_dynamix.json
@@ -29,7 +29,7 @@
         {
             "percent": "100",
             "link": "https://youtu.be/kZMBgcRDVTo?si=X7uV2twRFBSs1lNh",
-            "user": "rei"
+            "user": "Rei"
         }
     ]
 }
