--- a/data/flappy_dynamix_ii.json
+++ b/data/flappy_dynamix_ii.json
@@ -34,7 +34,7 @@
         {
             "percent": "100",
             "link": "https://www.youtube.com/watch?v=fxqtgn0VF4M&t=20s",
-            "user": "rei"
+            "user": "Rei"
         }
     ]
 }
